   - Remove illegal default argument in PointlistGate.h

SpecTcl-3.0-007
   - Credit D. Bazin as original author of TreeParam in the sources.
   - Fix configuration not always finding motif headers on current systems.
   - Fix 64-bit uncleanliness in Xamine

SpecTcl-3.0-008
   - Added wysiwyg printing based on image capture from the frames.
   - Fix defects 195, 196: Gri was emitting epsf which printers would
     smoosh all on one page. Print setup dialog's print command had
     a duplicate widget name that made it operate strangely.
   - Added jumboscripted ..scriptable readout for buffers > 64Kwords.
   - Check for gd in configure and create appropriate compiler/ld
     options.
SpecTcl-3.0-009
   - Defect 197 : scaling.h the averaging boxes for 2d average reduction
                  were too wide by a channel
   - Defect 200 : long/int mixup that is 64 bit unclean in gamma1DL.cpp
                  This makes 64bit gamma1dL spectra have only everyother
                  channel set and can overwrite past the end of the spectrum
                  as well fi the parameter range covers more than the
                  spectrum range!!
   - Defect 209 : more issues like Defect 200.
   - Defect 210 : SpecTcl/AppInit.cpp had sscanf of int -> long. 64 bit bad.
   - Defect 211 : Creating g1 spectrum with empty parameter list crashes with
                  SEGFLT.
   - Fix erroneous alignment mask computation in allocator.c that could lead
       to Xamine free list corruption
   - Fix error in wysiwyg printing when zoomed.
   - Fix an off by one error in scaling 1-d lineary channels.  For small scales
     and channel values the hieght of the channel was visibly lower than the 
     corresponding tick mark.
   - Enh 194    : provide more precision in output of integration.

  Released September 21, 2006

3.0-010  
	Oct. 17, 2006 BZ 219  - output the contents of VERSIOn to TCL's stdout
        Nov 09, 2006 Added CHANGELOG to installation.