@@ -290,6 +290,13 @@ static const char* Copyright = "(C) Copyright Michigan State University 1994, Al
 */
 /*
  $Log$
+ Revision 5.1.2.4  2006/11/17 18:06:29  ron-fox
+ Fix for defect 2228,
+    Printer defaults can get not well defined resulting in
+    - Bad Xamine.Defaults file,
+    - Print failures
+    - Xamine crashes.
+
  Revision 5.1.2.3  2006/05/23 13:26:12  ron-fox
  Fix defects 195,196:
  - Gri was emitting EPSF headers which for multipage output squashes all the
@@ -432,6 +439,23 @@ struct PrintAllData Print_Options;
 struct ContoursData Contours_Data;
 struct PrinterOptionsData Printer_Options_Data;
 struct DefaultPrintOptions* dflt_print_opts = NULL;
+
+DefaultPrintOptions::DefaultPrintOptions()
+ {
+    layout = portrait;
+    num    = printsel;
+    dest   = toprinter;
+    res    = one;
+    file_type  = -1;
+    xlen       = 4;
+    ylen       = 4;
+    time_stamp = 0;
+    color_pal  = 0;
+    contours   = 0;
+    symbols    = 0;
+
+ }
+
 
 class SetupPrintDialog : public XMCustomDialog
 {
@@ -584,8 +608,7 @@ PrinterType Xamine_GetPrinterType()
 char *Xamine_GetPrintCommand()
 {
   if(!dflt_print_opts) {
-    dflt_print_opts = new struct DefaultPrintOptions;
-    strcpy(dflt_print_opts->print_cmd,printcmd);
+    dflt_print_opts = new DefaultPrintOptions;
   }
   return dflt_print_opts->print_cmd;
 }
@@ -1938,12 +1961,12 @@ void Xamine_PrintSpectrumDialog(XMWidget* w, XtPointer user, XtPointer call)
   char xlabel[72];
   char ylabel[72];
   int nSpectrum = pAttributes->spectrum();
-  int fDefaultsExist = (dflt_print_opts != NULL);
-  if(!fDefaultsExist) {
-    ps_dialog->setnum(printsel);
-  } else {
-    ps_dialog->setnum(dflt_print_opts->num);
-  }
+
+  if(!dflt_print_opts) {
+    dflt_print_opts =  new DefaultPrintOptions;
+
+  } 
+  ps_dialog->setnum(dflt_print_opts->num);
 
   switch(xamine_shared->gettype(nSpectrum)) {
   case onedword:
@@ -2038,68 +2061,51 @@ void Xamine_PrintSpectrumDialog(XMWidget* w, XtPointer user, XtPointer call)
   ps_dialog->allow_geom(false);
   ps_dialog->allow_tics(false);
   ps_dialog->settics(deflt);
-  if(!fDefaultsExist) {
-    ps_dialog->setlayout(portrait);
-  } else {
-    ps_dialog->setlayout(dflt_print_opts->layout);
-  }
 
-  if(!fDefaultsExist) {
-    ps_dialog->setrows(rows);
-    ps_dialog->setcols(cols);
-  }
-  else {
-    ps_dialog->setrows(dflt_print_opts->rows);
-    ps_dialog->setcols(dflt_print_opts->cols);
-  }
+  ps_dialog->setlayout(dflt_print_opts->layout);
+
+  ps_dialog->setrows(dflt_print_opts->rows);
+  ps_dialog->setcols(dflt_print_opts->cols);
 
   ps_dialog->settitle
     (const_cast<char*>(Xamine_GetSpectrumTitle().c_str()));
   
-  if(!fDefaultsExist) {
-    ps_dialog->setxlen("4");
-    ps_dialog->setylen("4");
-  } else {
-    char xlen[10];
-    char ylen[10];
-    sprintf(xlen, "%f", dflt_print_opts->xlen);
-    sprintf(ylen, "%f", dflt_print_opts->ylen);
-    ps_dialog->setxlen(xlen);
-    ps_dialog->setylen(ylen);
-  }
+  char xlen[10];
+  char ylen[10];
+  sprintf(xlen, "%f", dflt_print_opts->xlen);
+  sprintf(ylen, "%f", dflt_print_opts->ylen);
+  ps_dialog->setxlen(xlen);
+  ps_dialog->setylen(ylen);
+
   ps_dialog->setspecified();
   if(fs / 4) {
     ps_dialog->setcontour_inc(ci);
   }
-  if(!fDefaultsExist) {
-    ps_dialog->setcmd(Xamine_GetPrintCommand());
-    ps_dialog->setdest(toprinter);
-    ps_dialog->setres(one);
-  } else {
-    ps_dialog->setcmd(dflt_print_opts->print_cmd);
-    ps_dialog->setdest(dflt_print_opts->dest);
-    ps_dialog->setlist_type(dflt_print_opts->file_type+1);
-    ps_dialog->setres(dflt_print_opts->res);
-  }
+
+  ps_dialog->setcmd(dflt_print_opts->print_cmd);
+  ps_dialog->setdest(dflt_print_opts->dest);
+  ps_dialog->setlist_type(dflt_print_opts->file_type+1);
+  ps_dialog->setres(dflt_print_opts->res);
+
   ps_dialog->setfile(const_cast<char*>(Xamine_GetOutputFilename().c_str()));
 
   // If defaults exist in the defaults file, set the appropriate
   // spectrum options toggle switch states.
-  if(fDefaultsExist) {
-    switch(xamine_shared->gettype(nSpectrum)) {
-    case twodbyte:
-    case twodword:
-      ps_dialog->set_palette(dflt_print_opts->color_pal);
-      ps_dialog->setdraw_palette(1);
-      ps_dialog->set_contours(dflt_print_opts->contours);
-      break;
-    case onedword:
-    case onedlong:
-      ps_dialog->set_symbols(dflt_print_opts->symbols);
-      break;
-    }
-    ps_dialog->set_time(dflt_print_opts->time_stamp);
+
+  switch(xamine_shared->gettype(nSpectrum)) {
+  case twodbyte:
+  case twodword:
+    ps_dialog->set_palette(dflt_print_opts->color_pal);
+    ps_dialog->setdraw_palette(1);
+    ps_dialog->set_contours(dflt_print_opts->contours);
+    break;
+  case onedword:
+  case onedlong:
+    ps_dialog->set_symbols(dflt_print_opts->symbols);
+    break;
   }
+  ps_dialog->set_time(dflt_print_opts->time_stamp);
+
 
   /* Manage the dialog to pop it up */
 
@@ -2128,7 +2134,7 @@ void Xamine_NoGriDialog(XMWidget* w, XtPointer user, XtPointer call)
 int Xamine_SetDfltPrintOpts(XMWidget* w, XtPointer user, XtPointer call)
 {
   if(!dflt_print_opts) {
-    dflt_print_opts = new struct DefaultPrintOptions;
+    dflt_print_opts = new  DefaultPrintOptions;
     if(!dflt_print_opts)
       return FALSE;
   }
