@@ -373,19 +373,8 @@ struct DefaultPrintOptions {
   char        print_cmd[200];
   char        rows[10];
   char        cols[10];
-  DefaultPrintOptions() {
-    layout = portrait;
-    num    = printsel;
-    dest   = toprinter;
-    res    = one;
-    file_type  = -1;
-    xlen       = 0;
-    ylen       = 0;
-    time_stamp = 0;
-    color_pal  = 0;
-    contours   = 0;
-    symbols    = 0;
-  }
+  DefaultPrintOptions();
+
 };
 
 void Xamine_SetupPrinter(XMWidget *w, XtPointer user, XtPointer call);
